--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "tsc src/app.ts",
+    "start:dev": "nodemon",
+    "dev:windows": "SET NODE_ENV=development nodemon ./src/bin/www",
     "start": "NODE_ENV=production node ./src/bin/www",
     "dev": "NODE_ENV=development nodemon ./src/bin/www",
     "test": "jest",
@@ -11,6 +14,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@databases/sqlite": "^4.0.2",
     "cookie-parser": "~1.4.3",
     "express": "~4.16.0",
     "helmet": "^3.21.1",
@@ -18,6 +22,9 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "@types/uuid": "^8.3.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -29,7 +36,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^24.8.0",
     "nodemon": "^1.18.7",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   },
   "jest": {
     "testEnvironment": "node"
