--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "tsc src/app.ts",
     "start:dev": "nodemon",
     "dev:windows": "SET NODE_ENV=development nodemon ./src/bin/www",
-    "start": "NODE_ENV=production node ./src/bin/www",
-    "dev": "NODE_ENV=development nodemon ./src/bin/www",
+    "start": "nodemon",
+    "dev": "nodemon",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint .",
@@ -17,6 +17,7 @@
     "@databases/sqlite": "^4.0.2",
     "cookie-parser": "~1.4.3",
     "express": "~4.16.0",
+    "express-validator": "^6.14.2",
     "helmet": "^3.21.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0"
@@ -36,7 +37,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^24.8.0",
     "nodemon": "^1.18.7",
-    "supertest": "^3.3.0",
+    "supertest": "^3.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0"
